// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserButtonPopup multi session mode renders the popup with all the available sessions 1`] = `
Array [
  <div
    className="cl-user-button-popup-current-account"
  >
    <svg
      aria-label="John Doe"
      className="cl-user-button-avatar"
      style={
        Object {
          "height": 64,
          "width": 64,
        }
      }
      version="1.1"
      viewBox="0, 0, 100, 100"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        John Doe
      </title>
      <circle
        cx="50"
        cy="50"
        fill="currentColor"
        r="49"
        strokeWidth="0"
      />
      <text
        fill="#ffffff"
        fontFamily="inherit"
        fontSize="60"
        fontWeight="400"
        textAnchor="middle"
        x="50"
        y="71.5"
      >
        JD
      </text>
    </svg>
    <div
      className="cl-user-button-headline"
    >
      Hi, John!
    </div>
    <div
      className="cl-user-button-identifier"
    />
  </div>,
  <div
    className="cl-active-accounts-manager"
  >
    <div
      className="cl-active-account-buttonset"
    >
      <button
        className="button outline primary hoverable cl-accounts-manager-button small"
        disabled={false}
        onClick={[Function]}
        style={
          Object {
            "display": "flex",
          }
        }
      >
        <svg
          data-filename="../shared/assets/icons/cog.svg"
        />
        Manage account
      </button>
      <button
        className="button outline primary hoverable cl-accounts-manager-button small"
        disabled={false}
        onClick={[Function]}
        style={
          Object {
            "display": "flex",
          }
        }
      >
        <svg
          data-filename="../shared/assets/icons/sign-out.svg"
        />
        Sign out
      </button>
    </div>
    <div
      className="cl-account-switcher"
    >
      <button
        className="button text primary hoverable cl-account-switcher-button"
        onClick={[Function]}
      >
        <img
          alt="Carla Coe"
          className="avatar cl-user-button-avatar"
          height={36}
          onError={[Function]}
          src="http://test.host/profile.png?height=64"
          title="Carla Coe"
          width={36}
        />
        <div
          className="cl-details"
        >
          <span>
            Carla
             
            Coe
          </span>
          <span />
        </div>
      </button>
      <button
        className="button text primary hoverable cl-account-switcher-button cl-account-switcher-add-button"
        onClick={[Function]}
      >
        <div
          className="cl-account-switcher-add-button-icon"
        >
          <svg
            data-filename="../shared/assets/icons/user-plus.svg"
          />
        </div>
        <span>
          Add account
        </span>
      </button>
    </div>
    <div
      className="cl-sign-out-all"
    >
      <button
        className="button outline primary hoverable cl-sign-out-all-button small"
        onClick={[Function]}
      >
        <svg
          data-filename="../shared/assets/icons/sign-out.svg"
        />
        Sign out of all accounts
      </button>
    </div>
  </div>,
]
`;

exports[`UserButtonPopup single session mode only renders active sessions 1`] = `
Array [
  <div
    className="cl-user-button-popup-current-account"
  >
    <svg
      aria-label="John Doe"
      className="cl-user-button-avatar"
      style={
        Object {
          "height": 64,
          "width": 64,
        }
      }
      version="1.1"
      viewBox="0, 0, 100, 100"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        John Doe
      </title>
      <circle
        cx="50"
        cy="50"
        fill="currentColor"
        r="49"
        strokeWidth="0"
      />
      <text
        fill="#ffffff"
        fontFamily="inherit"
        fontSize="60"
        fontWeight="400"
        textAnchor="middle"
        x="50"
        y="71.5"
      >
        JD
      </text>
    </svg>
    <div
      className="cl-user-button-headline"
    >
      Hi, John!
    </div>
    <div
      className="cl-user-button-identifier"
    />
  </div>,
  <div
    className="cl-active-accounts-manager"
  >
    <div
      className="cl-active-account-buttonset"
    >
      <button
        className="button outline primary hoverable cl-accounts-manager-button small"
        disabled={false}
        onClick={[Function]}
        style={
          Object {
            "display": "flex",
          }
        }
      >
        <svg
          data-filename="../shared/assets/icons/cog.svg"
        />
        Manage account
      </button>
      <button
        className="button outline primary hoverable cl-accounts-manager-button small"
        disabled={false}
        onClick={[Function]}
        style={
          Object {
            "display": "flex",
          }
        }
      >
        <svg
          data-filename="../shared/assets/icons/sign-out.svg"
        />
        Sign out
      </button>
    </div>
  </div>,
]
`;

exports[`UserButtonPopup single session mode renders the popup with all the available sessions 1`] = `
Array [
  <div
    className="cl-user-button-popup-current-account"
  >
    <svg
      aria-label="John Doe"
      className="cl-user-button-avatar"
      style={
        Object {
          "height": 64,
          "width": 64,
        }
      }
      version="1.1"
      viewBox="0, 0, 100, 100"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        John Doe
      </title>
      <circle
        cx="50"
        cy="50"
        fill="currentColor"
        r="49"
        strokeWidth="0"
      />
      <text
        fill="#ffffff"
        fontFamily="inherit"
        fontSize="60"
        fontWeight="400"
        textAnchor="middle"
        x="50"
        y="71.5"
      >
        JD
      </text>
    </svg>
    <div
      className="cl-user-button-headline"
    >
      Hi, John!
    </div>
    <div
      className="cl-user-button-identifier"
    />
  </div>,
  <div
    className="cl-active-accounts-manager"
  >
    <div
      className="cl-active-account-buttonset"
    >
      <button
        className="button outline primary hoverable cl-accounts-manager-button small"
        disabled={false}
        onClick={[Function]}
        style={
          Object {
            "display": "flex",
          }
        }
      >
        <svg
          data-filename="../shared/assets/icons/cog.svg"
        />
        Manage account
      </button>
      <button
        className="button outline primary hoverable cl-accounts-manager-button small"
        disabled={false}
        onClick={[Function]}
        style={
          Object {
            "display": "flex",
          }
        }
      >
        <svg
          data-filename="../shared/assets/icons/sign-out.svg"
        />
        Sign out
      </button>
    </div>
    <div
      className="cl-account-switcher"
    >
      <button
        className="button text primary hoverable cl-account-switcher-button"
        onClick={[Function]}
      >
        <img
          alt="Carla Coe"
          className="avatar cl-user-button-avatar"
          height={36}
          onError={[Function]}
          src="http://test.host/profile.png?height=64"
          title="Carla Coe"
          width={36}
        />
        <div
          className="cl-details"
        >
          <span>
            Carla
             
            Coe
          </span>
          <span />
        </div>
      </button>
    </div>
    <div
      className="cl-sign-out-all"
    >
      <button
        className="button outline primary hoverable cl-sign-out-all-button small"
        onClick={[Function]}
      >
        <svg
          data-filename="../shared/assets/icons/sign-out.svg"
        />
        Sign out of all accounts
      </button>
    </div>
  </div>,
]
`;
